# quantum-launcher

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flathub-sources.json  io.github.Mrmayman.QuantumLauncher.yml  ql.spec  quantum_launcher.spec  test_pre_launch_prefix.md
.github/: dependabot.yml
.github/workflows/: build-appimage.yml  build-deb.yml  build-flatpak.yml  build-macos.yml  build-rpm.yml  build.yml  build_test.yml  release.yml
assets/: README.md
assets/ascii/: icon.txt
assets/binaries/: README.md
assets/fonts/password_asterisks/: where.txt
assets/freedesktop/: manifest.yml  ql_flatpak.desktop  quantum-launcher.metainfo.xml
assets/freedesktop/debian/: changelog  control  rules
assets/installers/: cursed_legacy_fabric.json
assets/licenses/: LWJGL.txt
changelogs/: 0.3.1.md  0.3.md  0.4.1.md  0.4.2.md  0.4.md  unreleased.md
crates/omniarchive_api/: Cargo.toml
crates/ql_core/: Cargo.toml
crates/ql_core/src/: clean.rs  error.rs  file_utils.rs  lib.rs  loader.rs  print.rs  read_log.rs  urlcache.rs
crates/ql_core/src/jarmod/: json.rs  mod.rs
crates/ql_core/src/json/: asset_index.rs  fabric.rs  forge.rs  instance_config.rs  mod.rs  optifine.rs  version.rs
crates/ql_instances/: Cargo.toml
crates/ql_instances/src/: launcher_update_detector.rs  lib.rs
crates/ql_instances/src/auth/: alt.rs  authlib.rs  mod.rs  ms.rs
crates/ql_instances/src/auth/elyby/: mod.rs
crates/ql_instances/src/auth/littleskin/: mod.rs  oauth.rs
crates/ql_instances/src/auth/yggdrasil/: mod.rs  oauth.rs
crates/ql_instances/src/download/: constants.rs  downloader.rs  libraries.rs  library_downloader.rs  mod.rs
crates/ql_instances/src/instance/: migrate.rs  mod.rs  read_log.rs
crates/ql_instances/src/instance/launch/: error.rs  launcher.rs  mod.rs
crates/ql_java_handler/: Cargo.toml
crates/ql_java_handler/src/: alternate_java.rs  lib.rs
crates/ql_java_handler/src/json/: list.rs  mod.rs
crates/ql_mod_manager/: Cargo.toml
crates/ql_mod_manager/src/: lib.rs
crates/ql_mod_manager/src/loaders/: mod.rs  neoforge.rs  optifine.rs  paper.rs
crates/ql_mod_manager/src/loaders/fabric/: error.rs  make_launch_jar.rs  mod.rs  uninstall.rs  version_list.rs
crates/ql_mod_manager/src/loaders/forge/: error.rs  mod.rs  server.rs  uninstall.rs
crates/ql_mod_manager/src/loaders/neoforge/: mod.rs  run_installer.rs
crates/ql_mod_manager/src/presets/: mod.rs
crates/ql_mod_manager/src/store/: add_file.rs  delete.rs  error.rs  image.rs  local_json.rs  mod.rs  recommended.rs  toggle.rs  update.rs
crates/ql_mod_manager/src/store/curseforge/: download.rs  mod.rs
crates/ql_mod_manager/src/store/modpack/: curseforge.rs  mod.rs  modrinth.rs
crates/ql_mod_manager/src/store/modrinth/: download.rs  info.rs  mod.rs  search.rs  versions.rs
crates/ql_packager/: Cargo.toml
crates/ql_packager/src/: export.rs  import.rs  lib.rs  multimc.rs
crates/ql_reqwest/: Cargo.toml
crates/ql_reqwest/src/: lib.rs
crates/ql_servers/: Cargo.toml
crates/ql_servers/src/: create.rs  lib.rs  list_versions.rs  run.rs  server_properties.rs
docs/: CODEBASE.md  FORKS.md  KEYBINDS.md  PLUGINS.md  ROADMAP.md
docs/building/: BASICS.md
quantum_launcher/: Cargo.toml  quantum-launcher.desktop
quantum_launcher/src/: cli.rs  config.rs  icon_manager.rs  main.rs  mclog_upload.rs  mods_store.rs  tick.rs  update.rs  view.rs
quantum_launcher/src/cli/: command.rs  helpers.rs  mod.rs
quantum_launcher/src/menu_renderer/: changelog.rs  edit_instance.rs  launch.rs  log.rs  login.rs  mod.rs  settings.rs
quantum_launcher/src/menu_renderer/mods/: export_mods.rs  install_loader.rs  instance_package.rs  jarmods.rs  mod.rs  mods_manage.rs  presets.rs
quantum_launcher/src/menu_renderer/mods/mods_store/: html.rs  markdown.rs  mod.rs
quantum_launcher/src/menu_renderer/onboarding/: legacy.rs  mod.rs  v0_4_2.rs  welcome.rs
quantum_launcher/src/message_handler/: iced_event.rs  mod.rs
quantum_launcher/src/message_update/: accounts.rs  create_instance.rs  edit_instance.rs  manage_mods.rs  mod.rs  presets.rs  recommended.rs
quantum_launcher/src/state/: images.rs  menu.rs  message.rs  mod.rs
quantum_launcher/src/stylesheet/: color.rs  styles.rs  widgets.rs
scripts/: README.md  list_downloaded_natives.sh  list_so_files.sh  lswindow.sh  msrv_build.sh
tests/: .gitignore  Cargo.toml  README.md  __main__.py  create.py  launch.py  launch_instance.py  procs.py  run_suite.py  types.py
tests/src/: launch.rs  main.rs  version.rs
tests/src/search/: mod.rs  unix.rs  windows.rs
