[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }
ql_instances = { path = "../crates/ql_instances" }
ql_mod_manager = { path = "../crates/ql_mod_manager" }
ql_core = { path = "../crates/ql_core" }
ql_servers = { path = "../crates/ql_servers" }
ql_packager = { path = "../crates/ql_packager" }

tokio = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }

duct = "1"
sysinfo = "0.36"

[features]
default = ["tokio/rt-multi-thread"]
