[package]
name = "ql_core"
version = "0.0.0"
edition = "2021"

[dependencies]
ql_reqwest = { path = "../ql_reqwest" }


chrono = { workspace = true }
dirs = "6"
futures = { workspace = true }
colored = { workspace = true }

zip = { workspace = true }
walkdir = { workspace = true }
regex = "1"

tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
