[package]
name = "ql_core"
version = "0.0.0"
edition = "2021"

[features]
default = []
simulate_linux_arm64 = []
simulate_macos_arm64 = []

[dependencies]
chrono = { workspace = true }
dirs = "6"
futures = { workspace = true }
owo-colors = { workspace = true }

zip = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
