[package]
name = "ql_instances"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
simulate_linux_arm64 = []
simulate_macos_arm64 = []

[dependencies]
ql_core = { path = "../ql_core" }
ql_java_handler = { path = "../ql_java_handler" }
ql_reqwest = { path = "../ql_reqwest" }

chrono = { workspace = true }
semver = "1"
zip = { workspace = true }

tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { version = "0.37", features = ["encoding", "serialize"] }

colored = { workspace = true }
indicatif = "0.17"
thiserror = { workspace = true }

# Removing UNICODE characters from XML log
any_ascii = "0.3"

urlencoding = "2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "vendored"] }
[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "linux")))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
